import org.springframework.boot.gradle.tasks.run.BootRun

plugins{
    id 'java'
    id 'org.springframework.boot' version '2.7.9'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'application'
}
allprojects{
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'application'
    apply from  : "${rootDir}/dependencies.gradle"
}
subprojects{
    group = 'com.bilgeadam'
    version = 'v.0.1'
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    tasks.withType(JavaCompile){
        options.encoding = 'UTF-8'
    }
}
allprojects{
    repositories{
        mavenCentral()
        google()
    }
    buildscript{
        repositories{
            mavenCentral()
        }
    }
    dependencies{
        implementation libs.springBootWeb
        compileOnly libs.lombok
        annotationProcessor libs.lombok
        testImplementation libs.springBootTest
        testImplementation libs.junitJupiterApi
        testRuntimeOnly libs.junitJupiterEngine
        annotationProcessor libs.mapstructProcessor
        implementation libs.mapstruct
        implementation libs.swaggerui
        implementation libs.springBootValidation
//        implementation libs.springCloudConfigClient
    }
}

configurations{
    compileOnly{
        extendsFrom annotationProcessor
    }
}

tasks.register('runAllLocal') {
    tasks.withType(BootRun).each { bootRunTask ->
        bootRunTask.systemProperty 'spring.profiles.active', 'local'
    }
    dependsOn(':ApiGatewayService:bootRun')
}